<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Hasil">

    <TextView
        android:id="@+id/tvtask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvtaks"
        android:textSize="7pt"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.085" />

    <TextView
        android:id="@+id/ethtask"
        android:layout_width="382dp"
        android:layout_height="40dp"
        android:hint="Task"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.586"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.231" />

    <TextView
        android:id="@+id/ethjenist"
        android:layout_width="382dp"
        android:layout_height="40dp"
        android:layout_marginTop="64dp"
        android:hint="Jenis Task"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ethtask" />

    <TextView
        android:id="@+id/ethtimet"
        android:layout_width="382dp"
        android:layout_height="40dp"
        android:layout_marginTop="64dp"
        android:hint="Time Task"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ethjenist" />

    <TextView
        android:id="@+id/tvttask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/tvtaks"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ethtask"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvtjenist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/tvjenist"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ethjenist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvttimet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/tvtimet"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ethtimet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>